# libmatenotify

./: AUTHORS  ChangeLog  NEWS  README  autogen.sh  configure.ac
distro/archlinux/: PKGBUILD
distro/ubuntu/: build
libmatenotify/: Makefile.am  internal.h  notification.c  notification.h  notify-features.h.in  notify.c  notify.h
tests/: Makefile.am  test-basic.c  test-default-action.c  test-error.c  test-image.c  test-markup.c  test-multi-actions.c  test-replace-widget.c  test-replace.c  test-rtl.c  test-server-info.c  test-size-changes.c  test-urgency.c  test-xy-actions.c  test-xy-stress.c  test-xy.c
tools/: Makefile.am  notify-send.c
